Fix inconsistent spacing and misaligned icons on Contact section (#148)

--- a/style.css
+++ b/style.css
@@ -1210,12 +1210,12 @@ small {
   box-shadow: 0 18px 35px rgba(0, 0, 0, 0.15);
 }
 .input-wrapper {
-  /* position: relative; */
+  position: relative;
   width: 100%;
 }
 
 .input-icon {
-  /* position: absolute; */
+  position: absolute;
 
   left: 18px;
   top: 50%;
@@ -2019,6 +2019,7 @@ input:focus {
 .footer-social-icon {
   margin-top: 2rem;
   gap: 1rem;
+  align-items: center;
 }
 
 .footer-social-icon i {
